tests/sema/fail/v21_fail_extern_empty_library.ep
# COMPILE_FAIL_CONTAINS: extern Bad requires a non-empty library
extern "" fun Bad(): i64
fun main(): void {}
